--- a/apps/store/src/app/app.component.html
+++ b/apps/store/src/app/app.component.html
@@ -16,8 +16,9 @@
           {{ game.description }}
         </p>
         <span>
-          <span style="font-weight: bold;">Rating:</span> {{ game.rating }}
-        </span>
+          <span style="font-weight: bold;">Rating:</span>
+            {{ formatRating(game.rating) }}
+          </span>
       </mat-card-content>
     </mat-card>
   </div>
