Add github deploy action config

--- a/apps/store/src/app/app.component.html
+++ b/apps/store/src/app/app.component.html
@@ -13,7 +13,7 @@
       <img
         mat-card-image
         src="{{ game.image }}"
-        alt="Photo of board game {{ game.name }}"
+        alt="Photo of board game named {{ game.name }}"
       />
       <mat-card-content>
         <p>
